--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,18 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'erikw/tmux-powerline'
-run '~/.tmux/plugins/tpm/tpm'
 
+## Theme and colors
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 
 set-option -sa terminal-features ',xterm-256color:RGB'
 set -ga terminal-overrides ",screen-256color*:Tc"
 set -g default-terminal "screen-256color"
+set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @catppuccin_pill_theme_enabled on
 
+# should be last ?
+run '~/.tmux/plugins/tpm/tpm'
 
 # change prefix
 set -g prefix C-a
@@ -22,6 +27,7 @@ set -g mouse on
 
 ## refresh the config file
 bind r source-file ~/.config/tmux/tmux.conf
+bind t source-file ~/.config/tmux-powerline/config.sh
 
 bind | split-window -h -c "#{pane_current_path}"
 bind _ split-window -v -c "#{pane_current_path}"
@@ -34,5 +40,3 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-
-
